@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2017 Boxfuse GmbH
+ * Copyright 2010-2018 Boxfuse GmbH
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,7 +22,8 @@ import org.flywaydb.core.api.logging.LogFactory;
 import java.io.File;
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
-import java.lang.reflect.Method;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Modifier;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.net.URLDecoder;
@@ -51,15 +52,33 @@ public class ClassUtils {
      * @param classLoader The ClassLoader to use.
      * @param <T>         The type of the new instance.
      * @return The new instance.
-     * @throws Exception Thrown when the instantiation failed.
+     * @throws FlywayException Thrown when the instantiation failed.
      */
     @SuppressWarnings({"unchecked"})
     // Must be synchronized for the Maven Parallel Junit runner to work
     public static synchronized <T> T instantiate(String className, ClassLoader classLoader) {
         try {
-            return (T) Class.forName(className, true, classLoader).newInstance();
+            return (T) Class.forName(className, true, classLoader).getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             throw new FlywayException("Unable to instantiate class " + className + " : " + e.getMessage(), e);
+        }
+    }
+
+    /**
+     * Creates a new instance of this class.
+     *
+     * @param clazz The class to instantiate.
+     * @param <T>   The type of the new instance.
+     * @return The new instance.
+     * @throws FlywayException Thrown when the instantiation failed.
+     */
+    @SuppressWarnings({"unchecked"})
+    // Must be synchronized for the Maven Parallel Junit runner to work
+    public static synchronized <T> T instantiate(Class<T> clazz) {
+        try {
+            return clazz.getDeclaredConstructor().newInstance();
+        } catch (Exception e) {
+            throw new FlywayException("Unable to instantiate class " + clazz.getName() + " : " + e.getMessage(), e);
         }
     }
 
@@ -72,7 +91,7 @@ public class ClassUtils {
      * @return The list of instances.
      */
     public static <T> List<T> instantiateAll(String[] classes, ClassLoader classLoader) {
-        List<T> clazzes = new ArrayList<T>();
+        List<T> clazzes = new ArrayList<>();
         for (String clazz : classes) {
             if (StringUtils.hasLength(clazz)) {
                 clazzes.add(ClassUtils.<T>instantiate(clazz, classLoader));
@@ -86,7 +105,7 @@ public class ClassUtils {
      * and can be loaded. Will return {@code false} if either the class or
      * one of its dependencies is not present or cannot be loaded.
      *
-     * @param className   the name of the class to check
+     * @param className   The name of the class to check.
      * @param classLoader The ClassLoader to use.
      * @return whether the specified class is present
      */
@@ -97,6 +116,51 @@ public class ClassUtils {
         } catch (Throwable ex) {
             // Class or one of its dependencies is not present...
             return false;
+        }
+    }
+
+    /**
+     * Loads the class with this name using the class loader.
+     *
+     * @param className   The name of the class to load.
+     * @param classLoader The ClassLoader to use.
+     * @return the newly loaded class or {@code null} if it could not be loaded.
+     */
+    public static Class<?> loadClass(String className, ClassLoader classLoader) {
+        try {
+            Class<?> clazz = classLoader.loadClass(className);
+            if (Modifier.isAbstract(clazz.getModifiers()) || clazz.isEnum() || clazz.isAnonymousClass()) {
+                LOG.debug("Skipping non-instantiable class: " + className);
+                return null;
+            }
+
+            clazz.getDeclaredConstructor().newInstance();
+            LOG.debug("Found class: " + className);
+            return clazz;
+        } catch (InternalError e) {
+            LOG.debug("Skipping invalid class: " + className);
+            return null;
+        } catch (IncompatibleClassChangeError e) {
+            LOG.warn("Skipping incompatibly changed class: " + className);
+            return null;
+        } catch (NoClassDefFoundError e) {
+            LOG.debug("Skipping non-loadable class definition: " + className);
+            return null;
+        } catch (ClassNotFoundException e) {
+            LOG.debug("Skipping non-loadable class: " + className);
+            return null;
+        } catch (IllegalAccessException e) {
+            LOG.debug("Skipping non-instantiable class (illegal access): " + className);
+            return null;
+        } catch (InstantiationException e) {
+            LOG.debug("Skipping non-instantiable class (instantiation error): " + className);
+            return null;
+        } catch (NoSuchMethodException e) {
+            LOG.debug("Skipping non-instantiable class (no default constructor): " + className);
+            return null;
+        } catch (InvocationTargetException e) {
+            LOG.debug("Skipping non-instantiable class (invocation error): " + className);
+            return null;
         }
     }
 
@@ -140,18 +204,17 @@ public class ClassUtils {
     /**
      * Adds a jar or a directory with this name to the classpath.
      *
-     * @param name The name of the jar or directory to add.
+     * @param classLoader The current ClassLoader.
+     * @param name        The name of the jar or directory to add.
+     * @return The new ClassLoader containing the additional jar or directory.
      * @throws IOException when the jar or directory could not be found.
      */
-    public static void addJarOrDirectoryToClasspath(String name) throws IOException {
+    public static ClassLoader addJarOrDirectoryToClasspath(ClassLoader classLoader, String name) throws IOException {
         LOG.debug("Adding location to classpath: " + name);
 
         try {
             URL url = new File(name).toURI().toURL();
-            URLClassLoader sysloader = (URLClassLoader) ClassLoader.getSystemClassLoader();
-            Method method = URLClassLoader.class.getDeclaredMethod("addURL", URL.class);
-            method.setAccessible(true);
-            method.invoke(sysloader, url);
+            return new URLClassLoader(new URL[]{url}, classLoader);
         } catch (Exception e) {
             throw new FlywayException("Unable to load " + name, e);
         }
